--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Nav Drawer Without Basic Fragments</string>
+    <string name="app_name">Unizik Law Past Questions</string>
     <string name="next">Next</string>
     <string name="previous">Previous</string>
     <string name="nav_open">Open Navigation Drawer</string>
